Fix upload bugs